# fraud-detection-mlops-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy-hf-space.yml  keepalive-hf-space.yml
api/: app.py  schemas.py  service.py
artifacts/: data_validation.json  metrics_logistic_regression.json  metrics_xgboost.json  model_report.json  model_training_report.json
configs/: logging.yaml  train.yaml
models/: model.pkl  preprocessor.pkl  xgboost.pkl
src/: data_ingestion.py  evaluate.py  predict.py  preprocessing.py  register_model.py  train.py
tests/: conftest.py  test_api.py  test_data_ingestion.py  test_evaluate.py  test_preprocessing.py  test_service.py  test_training.py
