[project]
name = "fraud-detection-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.116",
    "httpx>=0.27,<0.29",
    "imbalanced-learn>=0.12,<0.15",
    "mlflow>=2.11,<3.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<2.4",
    "pydantic>=2.6,<3.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "scikit-learn>=1.4,<1.8",
    "uvicorn[standard]>=0.29,<0.36",
    "xgboost>=2.0,<3.0",
]
